RESOLVED FIXED97616
Load the linearized sRGB profile via NSData instead of CoreFoundation
https://bugs.webkit.org/show_bug.cgi?id=97616
Summary Load the linearized sRGB profile via NSData instead of CoreFoundation
Tim Horton
Reported 2012-09-25 16:01:41 PDT
Load the linearized sRGB profile via NSData instead of CoreFoundation. I have a patch.
Attachments
patch (3.86 KB, patch)
2012-09-25 16:04 PDT, Tim Horton
mitz: review+
Tim Horton
Comment 1 2012-09-25 16:04:09 PDT
mitz
Comment 2 2012-09-25 16:27:45 PDT
Comment on attachment 165694 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=165694&action=review > Source/WebCore/platform/graphics/mac/GraphicsContextMac.mm:193 > + linearSRGBSpace = CGColorSpaceCreateWithICCProfile((CFDataRef) iccProfileData.get()); Extra space after (CFDataRef).
Tim Horton
Comment 3 2012-09-25 16:38:15 PDT
Note You need to log in before you can comment on or make changes to this bug.