Load the linearized sRGB profile via NSData instead of CoreFoundation https://bugs.webkit.org/show_bug.cgi?id=97616

Reviewed by Dan Bernstein.

* platform/graphics/cg/GraphicsContextCG.cpp:
(WebCore::linearRGBColorSpaceRef):
* platform/graphics/mac/GraphicsContextMac.mm:
(WebCore::linearRGBColorSpaceRef):


Canonical link: https://commits.webkit.org/115590@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129573 268f45cc-cd09-0410-ab3c-d52691b4dbfc